# hft-practices

./: CMakeLists.txt  common.hpp  hft-practices.kdev4
.kdev4/: hft-practices.kdev4
includes/: LeonRQ.hpp  SHMRQ.cpp  SHMRQ.hpp  SHMRQ.tpp  common.hpp  mq.hpp  rdtscp.hpp
msg-que/: CMakeLists.txt  leonq-sp.cpp  lk-sp.cpp  mq-same-proc.cpp  mq-sp.cpp  shmrq-consumer.cpp  shmrq-producer.cpp  shmrq-sp.cpp  test-shmrq.cpp
multi-process/: bchk-consumer.cpp  bchk-producer.cpp  mq-consumer.cpp  mq-producer.cpp  rpc-consumer.cpp  rpc-producer.cpp  sem-consumer.cpp  sem-producer.cpp  wait-consumer.cpp  wait-producer.cpp
notify-mp/: CMakeLists.txt  bchk-consumer.cpp  bchk-producer.cpp  mq-consumer.cpp  mq-producer.cpp  rpc-consumer.cpp  rpc-producer.cpp  sem-consumer.cpp  sem-producer.cpp
notify-sp/: CMakeLists.txt  bchk-same-proc.cpp  cvex-same-proc.cpp  mq-same-proc.cpp  rpc-same-proc.cpp  sem-same-proc.cpp  wait-same-proc.cpp
single-process/: CMakeLists.txt  bchk-same-proc.cpp  cvex-same-proc.cpp  mq-same-proc.cpp  rpc-same-proc.cpp  sem-same-proc.cpp
